# full-text-search

./: .clang-tidy  .gitignore  CMakeLists.txt  ParserConfig.json  README.md  run.sh
cmake/: CompileOptions.cmake
include/libfts/: absolutepath.hpp.in  indexer.hpp  parser.hpp  search.hpp
include/libmath/: sum.hpp
include/searchapi/: indexer.h  parser.h  search.h
pythonscript/: main.py  search.py
pythonscripts/: fts.py  main.py
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/fts/: CMakeLists.txt  main.cpp
src/libfts/: CMakeLists.txt  indexer.cpp  parser.cpp  search.cpp
src/libmath/: CMakeLists.txt  sum.cpp
src/searchapi/: CMakeLists.txt  indexer.cpp  parser.cpp  search.cpp
src/sum-cli/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  main.cpp
tests/libfts/: indexer.test.cpp  parser.test.cpp  search.test.cpp  sum.test.cpp
tests/libmath/: sum.test.cpp
